[package]
name = "mustache"
version = "1.1.19"
edition = "2024"
license = "BSD-3-Clause"
description = "Pelican UI"
documentation = "https://docs.rs/mustache"
repository = "https://github.com/ramp-stack/mustache"

[dependencies]
uuid = { version = "1.16.0", features = ["v4", "v3", "js"] }
maverick_os = "0.2.0"
downcast-rs = "2.0.1"
image = "0.25.6"
nsvg = "0.5.1"
wgpu = "25.0.2"
#wgpu_canvas = "4.0.6"
include_dir = { version = "0.7.4", features = ["glob"] }
wgpu_canvas = "4.1.3"
pelican_ui_proc = {path="./pelican_ui_proc"}#"0.2.0"
serde = "1.0.219"