[package]
name = "roost_ui"
version = "2.0.6"
edition = "2024"
license = "BSD-3-Clause"
description = "roost UI"
documentation = "https://docs.rs/roost_ui"
repository = "https://github.com/ramp-stack/roost_ui"

[dependencies]
uuid = { version = "1.16.0", features = ["v4", "v3", "js"] }
maverick_os = {path="../maverick_os"} #"0.2.5"
downcast-rs = "2.0.1"
image = "0.25.6"
nsvg = "0.5.1"
wgpu = "25.0.2"
include_dir = { version = "0.7.4", features = ["glob"] }
pelican_ui_proc = "0.5.0"
wgpu_canvas = "4.1.3"
serde = "1.0.219"